@@ -1,3 +1,13 @@
+2013-03-06  21:24  Christos Zoulas <christos@zoulas.com>
+
+	* fix recursive magic separator printing
+
+2013-02-26  19:28  Christos Zoulas <christos@zoulas.com>
+
+	* limit recursion level for mget
+	* fix pread() related breakage in cdf
+	* handle offsets properly in recursive "use"
+
 2013-02-18  10:39  Christos Zoulas <christos@zoulas.com>
 
 	* add elf reading of debug info to determine if file is stripped
